--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "gatsby-starter-advanced",
+  "name": "popoponponpon",
   "description": "GatsbyJS starter that includes examples for advanced use cases.",
-  "version": "1.1.0",
-  "author": "Ruben Harutyunyan <vagr9k@gmail.com>",
+  "version": "0.1.0",
   "dependencies": {
     "gatsby": "^2.22.15",
     "gatsby-image": "^2.4.5",
