--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "description": "GatsbyJS starter that includes examples for advanced use cases.",
   "version": "0.1.0",
   "dependencies": {
+    "@emotion/core": "^10.0.35",
+    "@emotion/styled": "^10.0.27",
     "gatsby": "^2.22.15",
     "gatsby-image": "^2.4.5",
     "gatsby-plugin-catch-links": "^2.3.3",
+    "gatsby-plugin-emotion": "^4.3.10",
     "gatsby-plugin-feed": "^2.5.3",
     "gatsby-plugin-google-analytics": "^2.3.2",
     "gatsby-plugin-lodash": "^3.3.2",
@@ -14,6 +17,7 @@
     "gatsby-plugin-nprogress": "^2.3.2",
     "gatsby-plugin-offline": "^3.2.7",
     "gatsby-plugin-react-helmet": "^3.3.2",
+    "gatsby-plugin-root-import": "^2.0.5",
     "gatsby-plugin-sharp": "^2.6.9",
     "gatsby-plugin-sitemap": "^2.4.3",
     "gatsby-plugin-twitter": "^2.3.2",
@@ -27,15 +31,19 @@
     "gatsby-transformer-remark": "^2.8.13",
     "gatsby-transformer-sharp": "^2.5.3",
     "lodash": "^4.17.15",
-    "moment": "^2.26.0",
+    "moment": "^2.27.0",
     "netlify-cms-app": "^2.12.13",
     "prismjs": "^1.20.0",
     "react": "^16.13.1",
     "react-disqus-comments": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
+    "react-masonry-css": "^1.0.14",
     "react-share": "^4.1.0",
     "react-twitter-widgets": "^1.9.5",
+    "tailwindcss": "^1.8.2",
+    "tailwindcss-line-clamp": "^1.0.5",
+    "twin.macro": "^1.8.1",
     "url-join": "^4.0.0"
   },
   "devDependencies": {
@@ -78,5 +86,13 @@
     "plugins": [
       "remark-preset-lint-recommended"
     ]
+  },
+  "babelMacros": {
+    "twin": {
+      "config": "./tailwind.config.js",
+      "preset": "emotion",
+      "hasSuggestions": true,
+      "debug": false
+    }
   }
 }
